fix: container overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -28,14 +28,14 @@ body {
   min-height: 100vh;
 }
 
-
 /* iframe */
-.frameContainer{
+.frameContainer {
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
 
-.frameContainer > iframe{
+.frameContainer > iframe {
   width: 100%;
   height: 100%;
 }
